@@ -65,10 +65,13 @@ by placing them on the kernel command-line.
 .\"
 .TP
 .B \-\-confdir \fIdirectory\fP
-Read job configuration files from a directory other than
-\fI/etc/init\fP.
-For user session mode, read job configuration files from this
-directory at highest priority.
+Read job configuration files from a directory other than the default
+(\fI/etc/init\fP for process ID 1).
+
+When running as process ID 1, the last directory specified will be used.
+
+In user session mode, multiple directories will be honoured and job
+configuration files loaded from the directories in the order specified.
 .\"
 .TP
 .B \-\-default-console \fIvalue\fP
